# BookStore

./: .gitignore  README.md  app.yaml  config.ini  makefile  pyproject.toml
bookstore/: app.py  main.py
bookstore/functions/get_all_books/: lambda_function.py  requirements.txt
bookstore/functions/lib/: common.py
functions/bookstore-products/: .gitignore  app.py
functions/bookstore-products/.chalice/: config.json
functions/bookstore-products/.chalice/deployed/: dev.json
functions/common/: lambda_tools.py  lambda_utils.py
manager/: manager.py  setup.py
